<?xml version="1.0" encoding="utf-8"?>

<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".StoreActivity"
    >

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        >

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            >

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                >
                <ImageButton
                    android:id="@+id/dasani_btn"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    app:layout_constraintTop_toTopOf="parent"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    android:layout_marginTop="5dp"
                    android:src="@drawable/dasani_water"
                    android:scaleType="fitXY"
                    android:contentDescription="@string/dasani_img"
                    />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    app:layout_constraintTop_toTopOf="parent"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintStart_toEndOf="@+id/dasani_btn"
                    android:layout_marginTop="55dp"
                    android:layout_marginStart="10dp"
                    android:layout_marginEnd="30dp"
                    android:textSize="20sp"
                    android:text="@string/dasani_info"
                    />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                >
                <ImageButton
                    android:id="@+id/fruit_oatmeal_btn"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    app:layout_constraintTop_toTopOf="parent"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    android:src="@drawable/fruit_maple_oatmeal"
                    android:scaleType="fitXY"
                    android:contentDescription="@string/fruit_maple_oatmeal_img"
                    />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    app:layout_constraintTop_toTopOf="parent"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintStart_toEndOf="@+id/fruit_oatmeal_btn"
                    android:layout_marginTop="40dp"
                    android:layout_marginStart="10dp"
                    android:layout_marginEnd="30dp"
                    android:textSize="20sp"
                    android:text="@string/fruit_maple_oatmeal_info"
                    />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                >
                <ImageButton
                    android:id="@+id/hotcakes_btn"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    app:layout_constraintTop_toTopOf="parent"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    android:src="@drawable/hotcakes"
                    android:scaleType="fitXY"
                    android:contentDescription="@string/hotcakes_img"
                    />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    app:layout_constraintTop_toTopOf="parent"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintStart_toEndOf="@+id/hotcakes_btn"
                    android:layout_marginTop="55dp"
                    android:layout_marginStart="10dp"
                    android:layout_marginEnd="30dp"
                    android:textSize="20sp"
                    android:text="@string/hotcakes_info"
                    />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                >
                <ImageButton
                    android:id="@+id/sausage_biscuit_btn"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    app:layout_constraintTop_toTopOf="parent"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    android:src="@drawable/sausage_biscuit_regular_size_biscuit"
                    android:scaleType="fitXY"
                    android:contentDescription="@string/sausage_biscuit_img"
                    />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    app:layout_constraintTop_toTopOf="parent"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintStart_toEndOf="@+id/sausage_biscuit_btn"
                    android:layout_marginTop="40dp"
                    android:layout_marginStart="10dp"
                    android:layout_marginEnd="30dp"
                    android:textSize="20sp"
                    android:text="@string/sausage_biscuit_info"
                    />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                >
                <ImageButton
                    android:id="@+id/bacon_egg_biscuit_btn"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    app:layout_constraintTop_toTopOf="parent"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    android:src="@drawable/bacon_egg_cheese_biscuit_regular_size_biscuit"
                    android:scaleType="fitXY"
                    android:contentDescription="@string/bacon_egg_biscuit_img"
                    />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    app:layout_constraintTop_toTopOf="parent"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintStart_toEndOf="@+id/bacon_egg_biscuit_btn"
                    android:layout_marginTop="40dp"
                    android:layout_marginStart="10dp"
                    android:layout_marginEnd="30dp"
                    android:textSize="20sp"
                    android:text="@string/bacon_egg_biscuit_info"
                    />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                >
                <ImageButton
                    android:id="@+id/egg_sausage_biscuit_btn"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    app:layout_constraintTop_toTopOf="parent"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    android:src="@drawable/sausage_biscuit_regular_size_biscuit"
                    android:scaleType="fitXY"
                    android:contentDescription="@string/egg_sausage_biscuit_img"
                    />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    app:layout_constraintTop_toTopOf="parent"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintStart_toEndOf="@+id/egg_sausage_biscuit_btn"
                    android:layout_marginTop="40dp"
                    android:layout_marginStart="10dp"
                    android:layout_marginEnd="30dp"
                    android:textSize="20sp"
                    android:text="@string/egg_sausage_biscuit_info"
                    />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                >
                <ImageButton
                    android:id="@+id/sausage_burrito_btn"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    app:layout_constraintTop_toTopOf="parent"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    android:src="@drawable/sausage_burrito"
                    android:scaleType="fitXY"
                    android:contentDescription="@string/sausage_burrito_img"
                    />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    app:layout_constraintTop_toTopOf="parent"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintStart_toEndOf="@+id/sausage_burrito_btn"
                    android:layout_marginTop="55dp"
                    android:layout_marginStart="10dp"
                    android:layout_marginEnd="30dp"
                    android:textSize="20sp"
                    android:text="@string/sausage_burrito_info"
                    />
            </LinearLayout>

            <Button
                android:id="@+id/order_btn"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                android:layout_marginStart="15dp"
                android:layout_marginTop="20dp"
                android:layout_marginBottom="25dp"
                android:layout_marginEnd="15dp"
                android:text="@string/process_btn"
                android:textColor="@color/white"
                android:background="@color/black"
                />

        </LinearLayout>

    </ScrollView>

</androidx.constraintlayout.widget.ConstraintLayout>